Add immediately update viiper pad on sensor-updated option (gyro passthrough)
