# openapi.yaml
@@ -56,7 +56,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:5022/schemas/Config.json
+            - http://127.0.0.1:34516/schemas/Config.json
           format: uri
           readOnly: true
           type: string
@@ -98,10 +98,14 @@ components:
         GyroPassthrough:
           default: true
           type: boolean
+        ImmediateSensorUpdates:
+          default: false
+          type: boolean
       required:
         - DefaultControllerType
         - GyroPassthrough
         - AllowSteamDesktopLayout
+        - ImmediateSensorUpdates
       type: object
     Device:
       additionalProperties: false
@@ -147,7 +151,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:5022/schemas/ErrorModel.json
+            - http://127.0.0.1:34516/schemas/ErrorModel.json
           format: uri
           readOnly: true
           type: string
@@ -194,7 +198,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:5022/schemas/InitialLaunch.json
+            - http://127.0.0.1:34516/schemas/InitialLaunch.json
           format: uri
           readOnly: true
           type: string
@@ -218,7 +222,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:5022/schemas/OverlayChanged.json
+            - http://127.0.0.1:34516/schemas/OverlayChanged.json
           format: uri
           readOnly: true
           type: string
@@ -257,7 +261,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:5022/schemas/ShowHideUI.json
+            - http://127.0.0.1:34516/schemas/ShowHideUI.json
           format: uri
           readOnly: true
           type: string
@@ -290,7 +294,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:5022/schemas/SteamAndCefStatus.json
+            - http://127.0.0.1:34516/schemas/SteamAndCefStatus.json
           format: uri
           readOnly: true
           type: string
@@ -332,7 +336,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:5022/schemas/VIIPERStatus.json
+            - http://127.0.0.1:34516/schemas/VIIPERStatus.json
           format: uri
           readOnly: true
           type: string
@@ -347,7 +351,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:5022/schemas/VersionInfo.json
+            - http://127.0.0.1:34516/schemas/VersionInfo.json
           format: uri
           readOnly: true
           type: string
@@ -397,7 +401,7 @@ components:
       type: object
 info:
   title: SISR API
-  version: v0.4.2-122-ge8d0544
+  version: v0.4.2-123-gf46f897
 openapi: 3.1.0
 paths:
   /api/v1/config:
@@ -698,4 +702,4 @@ paths:
           description: Error
 servers:
   - description: SISR API
-    url: http://127.0.0.1:5022
+    url: http://127.0.0.1:34516
